--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.micro</groupId>
-	<artifactId>MicroServices</artifactId>
+	<artifactId>MicroServices-Front</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Microservices-3</name>
+	<name>Microservices-Front</name>
 	<description>Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
